# merlin

./: .gitignore  MerlinDriver.py  README.md  README.md.old  TODO.md  te.py  test.py
config/: controllers.yaml
extras/: Merlin-MR6200.robot  TEK32CS10_1.7.6_D301.rom  blend.by
include/merlin_hardware_interface/: merlin_hardware.h
launch/: controllers.launch  display.launch  gazebo.launch
merlin_arm_moveit_config/config/: joint_limits.yaml
merlin_arm_moveit_config/launch/: default_warehouse_db.launch  demo_gazebo.launch  merlin_arm_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch
merlin_bringup/: CMakeLists.txt  package.xml  test.py
merlin_bringup/config/: merlin_controllers.yml
merlin_bringup/launch/: bringup.launch  bringup_gazebo.launch  merlin_bringup.launch.py  merlin_control.launch.py  merlin_simulation.launch.py
merlin_bringup/scripts/: host.py
merlin_description/: CMakeLists.txt  README.md  package.xml
merlin_description/config/: config.rviz
merlin_description/gazebo/: merlin.gazebo.xacro  turntable.gazebo.xacro
merlin_description/launch/: gazebo.launch  view_robot.launch.py
merlin_description/meshes/: Elbow_1.stl  Face_Plate_1.stl  Lower_Head_1.stl  Shoulder_1.stl  Shoulder_Counter_Weight_1.stl  Upper_Head_1.stl  Waist_1.stl  base_link.stl
merlin_description/meshes/merlin/: Waist_1.stl
merlin_description/meshes/tools/: basic_drill.stl
merlin_description/meshes/turntable/: table_link_0.stl  table_link_1.stl
merlin_description/ros2_control/: merlin.ros2_control.xacro  table.ros2_control.xacro
merlin_description/srdf/: merlin.srdf
merlin_description/urdf/: materials.urdf.xacro  merlin.gazebo  merlin.trans  merlin.trans.xacro  merlin.xacro  merlin_system_position_only.urdf.xacro
merlin_description/urdf/merlin/: merlin.urdf.xacro  merlin_description.urdf.xacro
merlin_description/urdf/tools/: basic_drill.urdf.xacro
merlin_description/urdf/turntable/: turntable.urdf.xacro
merlin_hardware_interface/: CMakeLists.txt  merlin_hardware_interface.xml  package.xml
merlin_hardware_interface/arduino/: arduino.ino  config.h  info.txt  joint.h  robot_arm.cpp  robot_arm.h  speed_stepper.cpp  speed_stepper.h
merlin_hardware_interface/arduino2/: arduino2.ino  config.h
merlin_hardware_interface/config/: controllers.yaml  hardware.yaml  joint_limits.yaml
merlin_hardware_interface/include/merlin_hardware_interface/: merlin_hardware.h  merlin_hardware_interface.h  merlin_hardware_interface.hpp
merlin_hardware_interface/launch/: controllers.launch
merlin_hardware_interface/lib/MerlinControl/: Makefile  merlin_bot.cpp
merlin_hardware_interface/lib/merlin_control/: Makefile  README.md  merlin_control.cpp  merlin_control.h
merlin_hardware_interface/src/: merlin_hardware_interface.cpp  merlin_hardware_interface_node.cpp
merlin_hw/: CMakeLists.txt  package.xml
merlin_hw/config/: controllers.yaml
merlin_hw/launch/: controllers.launch
merlin_hw/src/: merlin_hardware_interface.cpp
merlin_hwi/: CMakeLists.txt  controller.yaml  joint_limits.yaml  package.xml  plugin.xml  ros_control.xacro
merlin_hwi/include/merlin_hw/: merlin_hwi.hpp
merlin_hwi/src/: merlin_hwi.cpp
merlin_moveit/: CMakeLists.txt  package.xml
merlin_moveit/config/: cartesian_limits.yml  joint_limits.yml  kinematics.yml  merlin_controllers.yml
merlin_moveit/launch/: merlin_move_group.launch.py
merlin_moveit/srdf/: merlin.srdf
merlin_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
merlin_moveit_config/config/: chomp_planning.yaml  fake_controllers.yaml  joint_limits.yaml  merlin.srdf  ros_controllers.yaml
merlin_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  merlin_arm_moveit_controller_manager.launch.xml  merlin_moveit_controller_manager.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  pilz_industrial_motion_planner_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
merlin_ros/: CMakeLists.txt  package.xml
merlin_ros/launch/: display.launch
meshes/: base_link.stl
path_runner/: CMakeLists.txt  are.py  package.xml
path_runner/config/: servoing.yml
path_runner/launch/: runner.launch.py  servo.launch.py
path_runner/notebook/: notebook.ipynb
src/merlin/: CMakeLists.txt  README.md  package.xml
src/merlin/arduino/: arduino.ino
src/merlin/config/: controllers.yaml  controllers.yaml.old  hardware.yaml  joint_limits.yaml
src/merlin/launch/: controllers.launch  gazebo.launch  gazebo.launch.py
src/merlin/merlin_bringup/: package.xml
src/merlin/merlin_description/: CMakeLists.txt  README.md
src/merlin/merlin_hardware_interface/: CMakeLists.txt  package.xml
src/merlin/meshes/: Elbow_1.stl  Face_Plate_1.stl  Head_1.stl  Lower_Head_1.stl  Shoulder_1.stl  Waist_1.stl
src/merlin/src/: merlin_hardware_interface.cpp  merlin_hardware_interface_node.cpp
src/merlin/urdf/: materials.xacro  merlin.gazebo.xacro  merlin.trans.xacro  merlin.xacro  merlin_arm.gazebo
src/merlin_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/merlin_arm_moveit_config/config/: merlin_arm.srdf
src/merlin_arm_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  planning_pipeline.launch.xml  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
src/merlin_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_carver/: CMakeLists.txt  package.xml
status_updates/10_17_2021/: 10_17_2021.html  10_17_2021.md
status_updates/proposal/: proposal.md
urdf/: merlin_arm.trans  merlin_arm.xacro
(+25 files in other folders)
