<?xml version="1.0"?>
<package format="2">
  <name>merlin_hardware_interface</name>
  <version>0.0.0</version>
<description>The merlin package</description>
  <maintainer email="nilezwalker@gmail.com">Nile Walker</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>joint_limits_interface</build_depend>

  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>tr1_description</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
</package>
