<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>merlin_moveit</name>
  <version>1.0.0</version>
  <description>Merlin moveit configurations.</description>
  <maintainer email="nilezwalker@gmail.com">walkenz1</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>moveit</exec_depend>
  <!-- <exec_depend>pilz_industrial_motion_planner</exec_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
