<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>merlin</name>
  <version>1.0.0</version>
  <description>The merlin_bringup package</description>
  <maintainer email="nilezwalker@gmail.com">Nile Walker</maintainer>
  <license>Apache License 2.0</license>
  
  <exec_depend>merlin_hw</exec_depend>
  <exec_depend>merlin_description</exec_depend>
  <exec_depend>pilz_industrial_motion</exec_depend>
  <exec_depend>moveit_planners</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>